package NYT.NCellMasterClient.NProto;

option python_package = "yt_proto.yt.client.cell_master.proto";

import "yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TCellDirectory
{
    message TItem
    {
        required NYT.NProto.TGuid cell_id = 1;
        repeated uint32 roles = 2; // EMasterCellRoles
        repeated string addresses = 3;
    }

    repeated TItem items = 1;
}

////////////////////////////////////////////////////////////////////////////////
